// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image circular variant render 1`] = `
<div>
  <img
    alt="Circular image"
    class="rounded-full block"
    src="localhost"
  />
</div>
`;

exports[`Image renders 1`] = `
<div>
  <img
    alt="Default image"
    class="block"
    src="localhost"
  />
</div>
`;
